--- a/ClashServer/ClashServer.csproj
+++ b/ClashServer/ClashServer.csproj
@@ -37,6 +37,10 @@
     <Compile Include="Shared\Util.cs" />
     <Compile Include="Shared\Message.cs" />
     <Compile Include="ServerClientHandle.cs" />
+    <Compile Include="Shared\Entity.cs" />
+    <Compile Include="Shared\PhysBody.cs" />
+    <Compile Include="Shared\Map.cs" />
+    <Compile Include="Shared\GridCell.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Shared\Net\" />
